Don't use geometry mapper if the target frame is throttled.

In order to use geometry mapper, we need to ensure that the prepaint
step of the lifecycle has run. However, if the target frame is
throttled this is not the case. We don't want to force run it, because
it causes compositing to run which has memory implications. Instead
fall back to slow path in intersection geometry.

Bug: 868230
R=chrishtr@chromium.org, pdr@chromium.org

Change-Id: Icaef44dd3e399b12df77eb550eb5ae0fa43291b6
Reviewed-on: https://chromium-review.googlesource.com/1150876
Commit-Queue: vmpstr <vmpstr@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578794}
Former-commit-id: ed12183d9f3e5dc9b42f8805c80874013e4599d1